<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/counter_label"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/quadratic_text" />

    <EditText
        android:id="@+id/quadratic_a"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textSize="30sp"
        android:hint="@string/quadratic_a_placeholder"
        android:autofillHints="" />

    <EditText
        android:id="@+id/quadratic_b"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textSize="30sp"
        android:hint="@string/quadratic_b_placeholder"
        android:autofillHints="" />

    <EditText
        android:id="@+id/quadratic_c"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textSize="30sp"
        android:hint="@string/quadratic_c_placeholder"
        android:autofillHints="" />

    <Button
        android:id="@+id/calculate_btn"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/green_button"
        android:gravity="center"
        android:text="@string/calculate_btn" />

    <Button
        android:id="@+id/main_menu_btn"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/main_menu_btn"/>
</LinearLayout>