<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/counter_label"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/main_menu" />

    <Button
        android:id="@+id/clicker_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/clicker_btn"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/base_calculator_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/base_calculator_btn"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/quadratic_calculator_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/quadratic_calculator"
        android:textSize="30sp"
        android:textStyle="bold" />
</LinearLayout>