<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView

        android:id="@+id/counter_label"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/counter_label_text" />

    <TextView
        android:id="@+id/counter_value"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/counter" />

    <Button
        android:id="@+id/increment_btn"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/green_button"
        android:gravity="center"
        android:text="@string/increment_btn" />

    <Button
        android:id="@+id/decrement_btn"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/red_button"
        android:gravity="center"
        android:text="@string/decrement_btn" />

    <EditText
        android:id="@+id/counterStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:textSize="30sp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/main_menu_btn"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/main_menu_btn" />
</LinearLayout>