<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/counter_label"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/calculator" />

    <TextView
        android:id="@+id/calc_display"
        android:maxLines="1"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="0"
        tools:ignore="HardcodedText" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:orientation="vertical"
        android:layout_weight="0">
        <TableRow >
            <Button
                android:id="@+id/calc_hello_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:layout_span="3"
                android:text="@string/hello_btn"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/calc_c_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="C"
                tools:ignore="HardcodedText, ButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/calc_7_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="7"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_8_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="8"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_9_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="9"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_division_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="/"
                tools:ignore="HardcodedText, ButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/calc_4_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="4"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_5_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="5"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_6_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="6"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_multiplication_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="x"
                tools:ignore="HardcodedText, ButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/calc_1_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="7"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_2_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="8"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_3_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="9"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_subtraction_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="-"
                tools:ignore="HardcodedText, ButtonStyle" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/calc_point_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="."
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_0_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="0"
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_equals_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="="
                tools:ignore="HardcodedText, ButtonStyle" />

            <Button
                android:id="@+id/calc_addition_btn"
                android:layout_height="@dimen/calc_size"
                android:layout_width="@dimen/calc_size"
                android:text="+"
                tools:ignore="HardcodedText, ButtonStyle" />
        </TableRow>

    </TableLayout>
    <Button
        android:id="@+id/main_menu_btn"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/teal_700"
        android:gravity="center"
        android:text="@string/main_menu_btn"/>
</LinearLayout>